Constants opt.: Basically completed Constant propagation
- Still need to find how to activate/deactivate this based on the "-o"